# puffin

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: pages.yml
docs/: Dockerfile  _config.yml  docker-compose.yml  index.md
docs/01-market-foundations/: 01-market-structure.md  02-asset-classes.md  03-trading-mechanics.md  04-financial-metrics.md  05-historical-context.md  06-market-microstructure.md  index.md
docs/02-data-pipeline/: 01-data-pipeline.md  01-data-providers.md  02-caching-storage.md  03-preprocessing.md  data-pipeline.md  index.md
docs/03-alternative-data/: 01-alternative-data.md  01-web-scraping-transcripts.md  02-alt-data-evaluation.md  alternative-data.md  index.md
docs/04-alpha-factors/: 01-alpha-factors.md  01-momentum-value-volatility.md  02-kalman-wavelets.md  03-factor-evaluation.md  alpha-factors.md  index.md
docs/05-portfolio-optimization/: 01-mean-variance.md  01-portfolio-optimization.md  02-risk-parity.md  03-hierarchical-risk-parity.md  index.md  portfolio-optimization.md
docs/06-trading-strategies/: 01-trading-strategies.md  02-putting-it-together.md  index.md
docs/07-backtesting/: 01-backtesting.md  01-event-driven-engine.md  02-execution-models.md  03-walk-forward-analysis.md  backtesting.md  index.md
docs/08-linear-models/: 01-linear-models.md  index.md  (+5 more)
examples/: 01_momentum_pipeline.py  02_ml_pipeline.py  03_ai_workflow.py  04_boosting_long_short.py  05_deep_rl_agent.py  bayesian_example.py  cnn_trading_demo.py  deep_learning_example.py  linear_models_demo.py  rnn_trading_example.py  time_series_models_example.py  unsupervised_example.py  word_embeddings_example.py
notebooks/: 01_financial_metrics.ipynb  data_pipeline.ipynb  deep_learning.ipynb  ml_models.ipynb  nlp_trading.ipynb  operational.ipynb
(+342 files in other folders)
