[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "puffin"
version = "0.1.0"
description = "Algorithmic trading guide, tutorial, and system"
requires-python = ">=3.11"
license = {text = "MIT"}
readme = "README.md"

dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.11",
    "yfinance>=0.2",
    "alpaca-py>=0.21",
    "sqlalchemy>=2.0",
    "matplotlib>=3.7",
    "plotly>=5.15",
    "python-dotenv>=1.0",
    "pydantic>=2.0",
    "requests>=2.31",
    "beautifulsoup4>=4.12",
]

[project.optional-dependencies]
ml = [
    "scikit-learn>=1.3",
    "torch>=2.0",
    "gymnasium>=0.29",
    "stable-baselines3>=2.0",
    "statsmodels>=0.14",
    "arch>=6.0",
    "xgboost>=2.0",
    "lightgbm>=4.0",
    "catboost>=1.2",
    "pymc>=5.10",
    "arviz>=0.17",
    "shap>=0.43",
    "ta-lib>=0.4; sys_platform != 'win32'",
    "alphalens-reloaded>=0.4",
    "pyfolio-reloaded>=0.9",
    "tensorflow>=2.14",
]
nlp = [
    "spacy>=3.7",
    "gensim>=4.3",
    "transformers>=4.35",
    "pyldavis>=3.4",
]
ai = [
    "anthropic>=0.30",
    "openai>=1.0",
    "feedparser>=6.0",
]
dashboard = [
    "streamlit>=1.28",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.21",
    "ruff>=0.1",
    "mypy>=1.5",
]
all = ["puffin[ml,nlp,ai,dashboard,dev]"]

[tool.setuptools.packages.find]
include = ["puffin*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
